--- a/app/src/main/res/layout/activity_local_match.xml
+++ b/app/src/main/res/layout/activity_local_match.xml
@@ -103,31 +103,31 @@
         android:id="@+id/keyboardLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="#C9BFFB"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="4dp"
-        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <!-- First row -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:orientation="horizontal">
 
-            <Button android:id="@+id/button_q" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Q" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_w" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="W" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_e" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="E" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_r" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="R" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_t" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="T" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_y" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Y" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_u" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="U" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_i" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="I" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_o" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="O" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_p" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="P" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_q" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="Q" />
+            <Button android:id="@+id/button_w" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="W" />
+            <Button android:id="@+id/button_e" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="E" />
+            <Button android:id="@+id/button_r" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="R" />
+            <Button android:id="@+id/button_t" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="T" />
+            <Button android:id="@+id/button_y" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="Y" />
+            <Button android:id="@+id/button_u" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="U" />
+            <Button android:id="@+id/button_i" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="I" />
+            <Button android:id="@+id/button_o" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="O" />
+            <Button android:id="@+id/button_p" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="P" />
         </LinearLayout>
 
         <!-- Second row -->
@@ -136,17 +136,18 @@
             android:layout_height="60dp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:weightSum="9">
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp">
 
-            <Button android:id="@+id/button_a" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="A" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_s" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="S" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_d" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="D" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_f" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="F" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_g" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="G" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_h" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="H" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_j" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="J" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_k" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="K" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_l" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="L" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_a" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="A" />
+            <Button android:id="@+id/button_s" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="S" />
+            <Button android:id="@+id/button_d" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="D" />
+            <Button android:id="@+id/button_f" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="F" />
+            <Button android:id="@+id/button_g" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="G" />
+            <Button android:id="@+id/button_h" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="H" />
+            <Button android:id="@+id/button_j" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="J" />
+            <Button android:id="@+id/button_k" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="K" />
+            <Button android:id="@+id/button_l" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="L" />
         </LinearLayout>
 
         <!-- Third row -->
@@ -154,20 +155,19 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:orientation="horizontal">
 
-            <Button android:id="@+id/button_delete" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.5" android:text="DEL" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp" />
-            <Button android:id="@+id/button_z" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Z" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_x" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="X" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_c" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="C" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_v" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="V" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_b" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="B" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_n" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="N" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_m" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="M" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
-            <Button android:id="@+id/button_enter" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.5" android:text="ENTER" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp" />
+            <Button android:id="@+id/button_delete" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.5" android:layout_margin="2dp" android:text="DEL" />
+            <Button android:id="@+id/button_z" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="Z" />
+            <Button android:id="@+id/button_x" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="X" />
+            <Button android:id="@+id/button_c" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="C" />
+            <Button android:id="@+id/button_v" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="V" />
+            <Button android:id="@+id/button_b" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="B" />
+            <Button android:id="@+id/button_n" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="N" />
+            <Button android:id="@+id/button_m" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_margin="2dp" android:text="M" />
+            <Button android:id="@+id/button_enter" style="@style/Widget.App.Button.LetterKey" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.5" android:layout_margin="2dp" android:text="ENTER" />
+
         </LinearLayout>
-
     </LinearLayout>
 
 
