--- a/app/src/main/res/layout/activity_daily1.xml
+++ b/app/src/main/res/layout/activity_daily1.xml
@@ -19,18 +19,19 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/bookIcon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@mipmap/wordventure_logo_foreground"
+            android:id="@+id/backIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="?attr/homeAsUpIndicator"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:tint="#051646" />
 
         <TextView
             android:id="@+id/settingsTitle"
@@ -44,7 +45,7 @@
             android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/bookIcon"
+            app:layout_constraintStart_toEndOf="@id/backIcon"
             app:layout_constraintEnd_toStartOf="@id/settingsIconContainer"
             android:paddingTop="12dp"
             android:paddingBottom="12dp" />
@@ -61,21 +62,21 @@
 
             <ImageView
                 android:id="@+id/profileIcon"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@mipmap/profile_icon_foreground"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
-                android:background="?attr/selectableItemBackgroundBorderless" />
+                android:src="@mipmap/profile_icon_foreground" />
 
             <ImageView
                 android:id="@+id/settingsIcon"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@mipmap/settings_icon_foreground"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
-                android:background="?attr/selectableItemBackgroundBorderless" />
+                android:src="@mipmap/settings_icon_foreground" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
