--- a/app/src/main/res/layout/activity_start_multiplayer_match.xml
+++ b/app/src/main/res/layout/activity_start_multiplayer_match.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/bookIcon"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@mipmap/wordventure_logo" /> <!-- Assuming you have a book icon -->
@@ -35,12 +36,14 @@
             android:textStyle="bold" />
 
         <ImageView
+            android:id="@+id/profileIcon"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginEnd="8dp"
             android:src="@mipmap/profile_icon" /> <!-- Assuming you have a person icon -->
 
         <ImageView
+            android:id="@+id/settingsIcon"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:src="@mipmap/settings_icon" /> <!-- Assuming you have a settings icon -->
