--- a/app/src/main/res/layout/activity_start_multiplayer_match.xml
+++ b/app/src/main/res/layout/activity_start_multiplayer_match.xml
@@ -72,22 +72,23 @@
         app:layout_constraintBottom_toTopOf="@id/paired_with_button"
         app:layout_constraintVertical_bias="0.0" />
 
-    <!-- "Paired With" Button at the bottom -->
-    <Button
-        android:id="@+id/paired_with_button"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="#C9BFFB"
-        android:drawableEnd="@mipmap/profile_icon"
-        android:paddingEnd="16dp"
-        android:text="Paired With"
-        android:textAlignment="center"
-        android:textColor="#051646"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView android:id="@+id/player_turn_indicator"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
+    android:layout_marginBottom="32dp"
+    android:background="@drawable/rounded_corner_background"
+    android:gravity="center"
+    android:padding="16dp"
+    android:textColor="#051646"
+    android:textSize="20sp"
+    android:textStyle="bold"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    tools:text="Player 1's Turn" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
