Fixed Daily, Added multiplayer scoreboard

--- a/app/src/main/res/layout/activity_local_match.xml
+++ b/app/src/main/res/layout/activity_local_match.xml
@@ -183,7 +183,7 @@
 
     <include
         android:id="@+id/stats_panel"
-        layout="@layout/stats_panel" />
+        layout="@layout/local_stats_panel" />
 
 </FrameLayout>
 
