--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -70,18 +70,14 @@
                 android:textColor="#051646"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/profileTitle"
-                app:layout_constraintStart_toEndOf="@id/settingsIcon"
-                app:layout_constraintTop_toTopOf="parent"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"/>
 
             <ImageView
                 android:id="@+id/settingsIcon"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
@@ -126,7 +122,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <!-- This is the ImageView that will display the selected profile picture -->
                 <ImageView
                     android:id="@+id/profilePicture"
                     android:layout_width="100dp"
@@ -340,20 +335,12 @@
                 <LinearLayout
                     android:id="@+id/guess_distribution_chart_container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="150dp"
                     android:orientation="vertical"
                     android:layout_marginTop="8dp"
-                    android:paddingStart="4dp"
-                    android:paddingEnd="4dp"/>
+                    android:background="#CECADF" />
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@id/statsCard"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="1dp"/>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
