--- a/app/src/main/res/layout/activity_start_multiplayer_match.xml
+++ b/app/src/main/res/layout/activity_start_multiplayer_match.xml
@@ -20,10 +20,19 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/bookIcon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@mipmap/wordventure_logo" /> <!-- Assuming you have a book icon -->
+            android:id="@+id/backIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:src="?attr/homeAsUpIndicator"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="#051646" /> <!-- Assuming you have a book icon -->
 
         <TextView
             android:layout_width="0dp"
@@ -58,7 +67,8 @@
         app:layout_constraintBottom_toTopOf="@+id/paired_with_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header_layout" />
+        app:layout_constraintTop_toBottomOf="@id/header_layout"
+        tools:ignore="UnknownId" />
 
     <!-- Container for the dynamically added words -->
     <LinearLayout
@@ -70,7 +80,8 @@
         android:paddingTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/header_layout"
         app:layout_constraintBottom_toTopOf="@id/paired_with_button"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="UnknownId" />
 
 
     <TextView android:id="@+id/player_turn_indicator"
