--- a/app/src/main/res/layout/activity_local_match.xml
+++ b/app/src/main/res/layout/activity_local_match.xml
@@ -82,17 +82,16 @@
     <!-- Wordle Board -->
     <GridLayout
         android:id="@+id/boardGrid"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:alignmentMode="alignMargins"
         android:columnCount="5"
         android:rowCount="6"
-        android:padding="8dp"
         android:useDefaultMargins="true"
         app:layout_constraintTop_toBottomOf="@id/headerLayout"
-        app:layout_constraintBottom_toTopOf="@id/keyboardLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.25" />
